--- a/modules/swagger-codegen/src/main/resources/python/rest.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/rest.mustache
@@ -58,12 +58,6 @@ class RESTClientObject(object):
         if configuration.assert_hostname is not None:
             addition_pool_args['assert_hostname'] = configuration.assert_hostname  # noqa: E501
 
-        if maxsize is None:
-            if configuration.connection_pool_maxsize is not None:
-                maxsize = configuration.connection_pool_maxsize
-            else:
-                maxsize = 4
-
         # https pool manager
         if configuration.proxy:
             self.pool_manager = urllib3.ProxyManager(
@@ -120,7 +114,7 @@ class RESTClientObject(object):
         post_params = post_params or {}
         headers = headers or {}
 
-        timeout = urllib3.Timeout(total=180)
+        timeout = urllib3.Timeout(total=self.configuration.request_time)
         if _request_timeout:
             if isinstance(_request_timeout, (int, ) if six.PY3 else (int, long)):  # noqa: E501,F821
                 timeout = urllib3.Timeout(total=_request_timeout)
@@ -133,8 +127,8 @@ class RESTClientObject(object):
             headers['Content-Type'] = 'application/json'
         query_params = [(k, v) for k, v in query_params if v is not None] if query_params else None
         req = PreparedRequest()
-        req.prepare(url=url,data= json.dumps(body) if body else None, headers=headers, method=method,
-            params=dict(query_params) if query_params else None)
+        req.prepare(url=url, data=json.dumps(body) if body else None, headers=headers, method=method,
+                    params=dict(query_params) if query_params else None)
         auth = self.configuration.get_auth(req)
         headers.update(auth)
 
