--- a/modules/swagger-codegen/src/main/resources/python/README.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/README.mustache
@@ -12,7 +12,7 @@
 
 ## Requirements.
 
-Python 2.7 and 3.4+
+Python 3.6+
 
 ## Installation & Usage
 ### pip install
@@ -31,20 +31,17 @@ pip install git+https://github.com/{{{gitUserId}}}/{{{gitRepoId}}}.git
 Then import the package:
 ```python
 import {{{packageName}}}
-from my_client.{{{apiPackage}}}.{{{classVarName}}} import {{{classname}}}
-from my_client.{{{apiPackage}}}.api_client import ApiClient
-from my_client.configuration import Configuration
+from {{{apiPackage}}}.{{{classVarName}}} import {{{classname}}}
+from {{{apiPackage}}}.api_client import ApiClient
+from configuration import Configuration, MarketplaceRegion
 
-endpoint = "https://sellingpartnerapi-na.amazon.com"
 refresh_token = "Atzr|IRbFOMiGxxx"
-role_arn = "arn:aws:iam::0094506083:role/SellirAllRolesxxx"
-aws_access_key = 'AKIAQEM3SIUZxxx'
-aws_secret_key = "xxjlOV3qnAWWLtyMsVw0EckXWxxx"
-client_id = 'amzn1.application48eb1e3b43a4b64xxx'
-client_secret = '8c934d4969b926b3137bdf63f4434c108cfxxx'
-marketplace_ids = ['ATVPDKIKX0DER']
-
-
+role_arn = "arn:aws:iam::00xxxxx:role/SellirAllRolesxxx"
+aws_access_key = 'xxx'
+aws_secret_key = "xxx"
+client_id = 'amzn1.application48eb1xxx'
+client_secret = 'xxx'
+marketplace_ids = [MarketplaceRegion.US.marketplace]
 config = Configuration(role_arn=role_arn, refresh_token=refresh_token, aws_access_key=aws_access_key,
 aws_secret_key=aws_secret_key, client_id=client_id, client_secret=client_secret, region = "US")
 api_client = ApiClient(configuration=config)
@@ -69,29 +66,3 @@ Class | Method | HTTP request | Description
 {{#models}}{{#model}} - [{{{classname}}}]({{modelDocPath}}{{{classname}}}.md)
 {{/model}}{{/models}}
 
-## Documentation For Authorization
-
-{{^authMethods}} All endpoints do not require authorization.
-{{/authMethods}}{{#authMethods}}{{#last}} Authentication schemes defined for the API:{{/last}}{{/authMethods}}
-{{#authMethods}}## {{{name}}}
-
-{{#isApiKey}}- **Type**: API key
-- **API key parameter name**: {{{keyParamName}}}
-- **Location**: {{#isKeyInQuery}}URL query string{{/isKeyInQuery}}{{#isKeyInHeader}}HTTP header{{/isKeyInHeader}}
-{{/isApiKey}}
-{{#isBasic}}- **Type**: HTTP basic authentication
-{{/isBasic}}
-{{#isOAuth}}- **Type**: OAuth
-- **Flow**: {{{flow}}}
-- **Authorization URL**: {{{authorizationUrl}}}
-- **Scopes**: {{^scopes}}N/A{{/scopes}}
-{{#scopes}} - **{{{scope}}}**: {{{description}}}
-{{/scopes}}
-{{/isOAuth}}
-
-{{/authMethods}}
-
-## Author
-
-{{#apiInfo}}{{#apis}}{{^hasMore}}{{infoEmail}}
-{{/hasMore}}{{/apis}}{{/apiInfo}}
