--- a/modules/swagger-codegen/src/main/resources/python/README.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/README.mustache
@@ -12,7 +12,11 @@
 
 ## Requirements.
 
-Python 3.6+
+- Python 3.6+
+- Openssl 1.0.2+
+```sh
+python -c "import ssl; print(ssl.OPENSSL_VERSION)"
+```
 
 ## Installation & Usage
 ### pip install
@@ -30,26 +34,30 @@ pip install git+https://github.com/{{{gitUserId}}}/{{{gitRepoId}}}.git
 
 Then import the package:
 ```python
-import {{{packageName}}}
-from {{{apiPackage}}}.{{{classVarName}}} import {{{classname}}}
-from {{{apiPackage}}}.api_client import ApiClient
-from configuration import Configuration, MarketplaceRegion
+{{#apiInfo}}{{#apis}}{{#-first}}{{#operations}}{{#operation}}{{#-first}}
+from {{{apiPackage}}} import ApiClient, {{{classname}}}
+from {{{packageName}}}.configuration import Configuration, MarketplaceRegion
 
-refresh_token = "Atzr|IRbFOMiGxxx"
-role_arn = "arn:aws:iam::00xxxxx:role/SellirAllRolesxxx"
-aws_access_key = 'xxx'
+refresh_token = "Atzr|xxx"
+role_arn = "arn:aws:iam::00xxxxx:role/xxx"
+aws_access_key = "xxx"
 aws_secret_key = "xxx"
-client_id = 'amzn1.application48eb1xxx'
-client_secret = 'xxx'
+client_id = "amzn1.application1xxx"
+client_secret = "xxx"
 marketplace_ids = [MarketplaceRegion.US.marketplace]
-config = Configuration(role_arn=role_arn, refresh_token=refresh_token, aws_access_key=aws_access_key,
-aws_secret_key=aws_secret_key, client_id=client_id, client_secret=client_secret, region = "US")
-api_client = ApiClient(configuration=config)
+_config = Configuration(role_arn=role_arn,
+                        refresh_token=refresh_token,
+                        aws_access_key=aws_access_key,
+                        aws_secret_key=aws_secret_key,
+                        client_id=client_id,
+                        client_secret=client_secret,
+                        region="US")
+api_client = ApiClient(configuration=_config)
 api_instance = {{{classname}}}(api_client)
 
-api_response = api_instance.xxx('112-941666-87519', marketplace_ids,_request_timeout=120)
+{{#returnType}}api_response = {{/returnType}}api_instance.{{{operationId}}}({{#allParams}}{{#required}}{{paramName}}{{/required}}{{^required}}{{paramName}}={{paramName}}{{/required}}{{#hasMore}}, {{/hasMore}}{{/allParams}})
 print(api_response)
-
+{{/-first}}{{/operation}}{{/operations}}{{/-first}}{{/apis}}{{/apiInfo}}
 ```
 
 ## Documentation for API Endpoints
@@ -65,4 +73,3 @@ Class | Method | HTTP request | Description
 
 {{#models}}{{#model}} - [{{{classname}}}]({{modelDocPath}}{{{classname}}}.md)
 {{/model}}{{/models}}
-
