添加重试参数,请求池参数

--- a/modules/swagger-codegen/src/main/resources/python/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/api.mustache
@@ -7,7 +7,7 @@ import six
 {{#operations}}
 class {{classname}}(object):
 
-    def __init__(self, api_client):
+    def __init__(self, api_client=None):
         self.api_client = api_client
 {{#operation}}
 
